--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,13 +2,22 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.triginandri.chatika">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_app"
         android:label="@string/app_name"
         android:roundIcon="@drawable/ic_app"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Chatika">
+        android:theme="@style/Theme.Chatika"
+        android:usesCleartextTraffic="true">
+        <activity
+            android:name=".DetailProfile"
+            android:exported="false" />
+        <activity
+            android:name=".ChatDosen"
+            android:exported="false" />
         <activity
             android:name=".Register"
             android:exported="false" />
