--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,10 @@
     package="com.triginandri.chatika">
 
     <uses-permission android:name="android.permission.INTERNET" />
-
+    <uses-permission android:name="android.permission.READ_CONTACTS"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"
+        android:maxSdkVersion="29" />
+    <uses-permission android:name="android.permission.READ_PHONE_NUMBERS" />
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_app"
@@ -12,6 +15,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Chatika"
         android:usesCleartextTraffic="true">
+        <activity
+            android:name=".SendMessage"
+            android:exported="false" />
+        <activity
+            android:name=".DetailNews"
+            android:exported="false" />
         <activity
             android:name=".DetailProfile"
             android:exported="false" />
@@ -37,5 +46,13 @@
             </intent-filter>
         </activity>
     </application>
+
+    <queries>
+        <intent>
+            <action android:name="android.intent.action.VIEW" />
+            <category android:name="android.intent.category.DEFAULT" />
+            <data android:mimeType="vnd.android.cursor.dir/contact" />
+        </intent>
+    </queries>
 
 </manifest>
